--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="clear"></div>
     </header>
-
+<--second section - - >
     <section class="second-section">
         <div class="container sec2">
             <h2>Get Every Updates</h2>
@@ -32,9 +32,9 @@
                             <img src="images/pic2.jpg">
                         </div>
                         <div class="details">
-                            <p class="name">Jhon Deo</p>
-                            <p class="love"><i class="fa fa-heart-o"></i> 27</p>
-                            <p class="message"><i class="fa fa-comment-o"></i> 12</p>
+                            <p>Jhon Deo</p>
+                            <p><i class="fa fa-heart-o"></i> 27</p>
+                            <p><i class="fa fa-comment-o"></i> 12</p>
                         </div>
                     </div>
                 </div>
@@ -46,9 +46,9 @@
                             <img src="images/pic2.jpg">
                         </div>
                         <div class="details">
-                            <p class="name">Jhon Deo</p>
-                            <p class="love"><i class="fa fa-heart-o"></i> 27</p>
-                            <p class="message"><i class="fa fa-comment-o"></i> 12</p>
+                            <p>Jhon Deo</p>
+                            <p><i class="fa fa-heart-o"></i> 27</p>
+                            <p><i class="fa fa-comment-o"></i> 12</p>
                         </div>
                     </div>
                 </div>
@@ -60,9 +60,9 @@
                             <img src="images/pic2.jpg">
                         </div>
                         <div class="details">
-                            <p class="name">Jhon Deo</p>
-                            <p class="love"><i class="fa fa-heart-o"></i> 27</p>
-                            <p class="message"><i class="fa fa-comment-o"></i> 12</p>
+                            <p>Jhon Deo</p>
+                            <p><i class="fa fa-heart-o"></i> 27</p>
+                            <p><i class="fa fa-comment-o"></i> 12</p>
                         </div>
                     </div>
                 </div>
